# CpE-4953-Embedded-Systems

./: .gitmodules  README.md
BMP280/: CMakeLists.txt  README.md  font.h  main.c  main.h  ssd1306.c  ssd1306.h
Cross_Compile/: SDK.dockerfile
Cross_Compile/Shared_Libs/Static_Libs/: build.py  divide_double.cpp  int_arithmetic.h  multiply_double.cpp  subtract_int.c
Cross_Compile/Static_Libs/: build.py  divide_int.c  main.c
Cross_Compile_Example/: Makefile
Shared_Libs/Static_Libs/: CMakeLists.txt  add_int.c  multiply_int.c  sharedLib.dockerfile  subtract_double.cpp
Static_Libs/: CMakeLists.txt  Makefile  add_double.cpp  double_arithmetic.hpp  example
building_toolchain/: hello
final_project/: README.md  bmp280_i2c.h  morse.c  morse.h  publisher.c  ssd1306.c  subscriber.c
